# Chat

./: Cargo.toml  _typos.toml  deny.toml  test.rest
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/tests/: chat.rs
migrations/: 20250715023731_initial.sql  20250725011524_workspace.sql  20250729222816_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  notif.rs  sse.rs
sql/: init.sql
src/: main.rs
src/handlers/: messages.rs
