[workspace]
members = ["chat_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "multipart", "query", "tracing",] }
error = "0.1.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
this = "0.3.0"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
