[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
argon2 = { version = "0.5.3", features = ["std"] }
axum = {workspace = true}
chrono = { version = "0.4.41", features = ["serde"] }
error = {workspace = true}
http-body-util = "0.1.3"
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }
serde = {workspace = true}
serde_json = "1.0.140"
serde_yaml = {workspace = true}
sqlx = { workspace = true}
this = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[dev-dependencies]
http-body-util = "0.1.3"
sqlx-db-tester = "0.6.0"
