[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
argon2 = { version = "0.5.3", features = ["std"] }
axum = {workspace = true}
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
error = {workspace = true}
hex = "0.4.3"
http-body-util = "0.1.3"
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }
mime_guess = "2.0.5"
serde = {workspace = true}
serde_json = "1.0.140"
serde_yaml = {workspace = true}
sha1 = "0.10.6"
sqlx = { workspace = true}
this = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-full", "fs", "trace"] }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
uuid = { version = "1.17.0", features = ["v7", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
sqlx-db-tester = "0.6.0"
